# sir-convert-a-lot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.agents/rules/: 000-rule-index.md  010-foundational-principles.md  030-conversion-workflows.md  035-docling-pdf-conversion.md  035-docling-pdf-conversion.mdc  046-docker-compose-v2-and-debugging.md  046-docker-compose-v2-and-debugging.mdc  070-testing-and-quality-gates.md  070-testing-and-quality-gates.mdc  081-pdm-and-dependency-management.md  081-pdm-and-dependency-management.mdc  085-postgresql-and-migrations.md  085-postgresql-and-migrations.mdc  090-documentation-standards.md  090-documentation-standards.mdc  HANDOFF.md  README_FIRST.md
.agents/session/: handoff.md  readme-first.md
.agents/skills/: README.md
.agents/skills/docs-as-code/: SKILL.md
.agents/skills/sir-convert-a-lot-devops-hemma/: SKILL.md
.agents/skills/sir-convert-a-lot-docs-governance/: SKILL.md
.agents/skills/sir-convert-a-lot-pdf-to-md/: SKILL.md
.agents/skills/sir-convert-a-lot-session-handoff/: SKILL.md
.agents/work/session/: handoff.md  readme-first.md
docs/: DOCS_STRUCTURE_SPEC.md
docs/_meta/: README.md  docs-contract.yaml
docs/backlog/: README.md  current.md
docs/backlog/epics/: epic-03-unified-conversion-service.md  epic-04-converter-suite-parity-with-html-to-pdf-handout-templates.md
docs/backlog/programmes/: programme-01-sir-convert-a-lot-platform-foundation.md
docs/backlog/stories/: story-02-01-hemma-offloaded-pdf-to-markdown-conversion-pipeline.md  story-03-01-lock-v1-contract-and-no-hassle-local-dev-ux.md  story-03-02-gpu-first-execution-and-fallback-governance.md  story-03-03-internal-backend-integration-huledu-skriptoteket.md  story-03-04-consolidate-html-pdf-md-docx-xlsx-csv.md  story-03-05-quality-performance-reliability-validation-gates.md  story-04-01-standalone-repo-bootstrap-and-governance-setup.md  story-05-dockerized-service-hardening-with-robust-persistence.md  story-06-pandoc-weasyprint-document-converters-parity-md-pdf-docx-txt.md  story-07-auxiliary-converters-parity-image-ocr-extract-text-to-speech.md  story-08-cli-multi-format-routing-and-deterministic-manifests.md  story-09-template-driven-html-conversions-handout-builder-parity.md  story-10-student-feedback-export-bundles-manifest-md-html-pdf-docx.md
docs/backlog/tasks/: fix-01-harden-cli-timeout-handling-for-long-running-background-jobs.md  task-04-02-bootstrap-docs-as-code-structure-under-docs.md  task-04-03-migrate-canonical-converter-code-and-quality-gates.md  task-04-04-prepare-docker-hemma-service-foundation.md  task-05-enforce-gpu-first-lock-and-benchmark-evidence-for-story-003b.md  task-06-define-thin-adapter-contract-and-conformance-harness-for-story-003c.md  task-07-establish-sir-convert-a-lot-hemma-deployment-readiness-and-tunnel-smoke-evidence-for-story-003c.md  task-08-adopt-story-003c-thin-adapter-in-huleedu-and-validate-demanding-scientific-pdf-workload.md  task-09-durable-filesystem-job-store-restart-recovery-retention-sweeper-story-02-01.md  task-10-docling-backend-ocr-policy-mapping-deterministic-markdown-normalization-width-100.md  task-11-pymupdf4llm-backend-deterministic-output-governance-compatibility-rules.md  task-12-scientific-paper-workload-evidence-harness-hemma-tunnel-acceptance-report-10-10-corpus.md  task-13-enforce-hemma-gpu-runtime-compliance-gate-and-rocm-verification.md  task-15-govern-benchmark-and-processing-outputs-outside-docs-reference.md  (+28 more)
docs/converters/: internal_adapter_contract_v1.md  multi_format_conversion_service_api_v2.md  pdf_to_md_service_api_v1.md  service_api_v1_v2_compatibility_policy.md  sir_convert_a_lot.md
docs/decisions/: 0001-pdf-to-md-service-v1-contract-and-phase0-decisions.md  0002-multi-format-service-api-v2.md
docs/pdr/: pdr-sir-convert-a-lot-v1.0.md
docs/reference/: benchmark-pdf-md-scientific-corpus-hemma.json  benchmark-story-003b-gpu-governance-local.json  ref-dockerized-hemma-gpu-passthrough-gap-2026-02-16.md  ref-docling-form-ordering-exam-pdf-2026-02-16.md  ref-html-to-pdf-handout-templates-conversion-capability-matrix-2026-02-18.md  ref-production-pdf-md-scientific-corpus-validation.md  ref-repository-roadmap-and-future-plans.md  ref-story-003b-gpu-governance-benchmark-evidence.md  ref-story-003c-consumer-integration-handoff.md
docs/runbooks/: runbook-hemma-devops-and-gpu.md
docs/tasks/: 002-hemma-offloaded-pdf-to-markdown-conversion-pipeline.md  003-unified-conversion-service-epic.md  003a-conversion-service-v1-contract-and-dev-experience-story.md  003b-gpu-first-execution-and-fallback-governance-story.md  003e-quality-performance-and-reliability-validation-story.md
scripts/devops/: dev-compose.sh  repair-hemma-rocm-runtime.sh  run-hemma.sh  run-local-pdm.sh  verify-hemma-gpu-runtime.sh  verify-hemma-v2-conversions.sh
scripts/docs_as_code/: __init__.py  common.py  index_tasks.py  new_doc.py  new_rule.py  new_task.py  task_templates.py  validate_docs.py  validate_tasks.py
scripts/sir_convert_a_lot/: README.md  __init__.py  benchmark_gpu_governance.py  benchmark_scientific_corpus.py  cli.py  client.py  live_docling_gpu_quality.py  models.py  runtime.py  service.py  service_eval.py
tests/sir_convert_a_lot/: pdf_fixtures.py  test_api_contract_v1.py  test_api_contract_v2.py  test_backend_routing.py  test_benchmark_gpu_governance.py  test_benchmark_scientific_corpus.py  test_cli_route_registry_and_dry_run.py  test_cli_v2_routes.py  test_compose_contract.py  test_convert_a_lot_cli.py  test_dev_compose_wrapper.py  test_docling_backend.py  test_docling_ordering_fallback.py  test_gpu_runtime_probe.py  test_integration_adapter_conformance.py  test_job_store_persistence.py  test_job_store_v2_cancel_cas.py  test_live_docling_gpu_quality.py  test_markdown_lint_normalizer.py  test_markdown_normalizer.py  test_pymupdf_backend.py  test_resources_zip.py  test_run_hemma_wrapper.py  test_runtime_conversion_quality_warnings.py  test_runtime_engine_conversion_failures.py  test_runtime_engine_gpu_policy.py  test_service_import_side_effects.py
(+123 files in other folders)
